Cognitive Complexity And Other fixes